--- a/templates/base.html
+++ b/templates/base.html
@@ -1,33 +1,80 @@
 {{define "base"}}
 <!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    {{template "styles" .}}
-    <title>{{ .Subject}}</title>
-</head>
-<body>
-<table
-        role="presentation"
-        border="0"
-        cellpadding="0"
-        cellspacing="0"
-        class="body"
+<html
+  lang="en"
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:v="urn:schemas-microsoft-com:vml"
+  xmlns:o="urn:schemas-microsoft-com:office:office"
 >
-    <tr>
-        <td>&nbsp;</td>
-        <td class="container">
-            <div class="content">
-                <!-- START CENTERED WHITE CONTAINER -->
-                {{block "content" .}}{{end}}
-                <!-- END CENTERED WHITE CONTAINER -->
-            </div>
-        </td>
-        <td>&nbsp;</td>
-    </tr>
-</table>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+      name="viewport"
+    />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible" />
+    <meta name="x-apple-disable-message-reformatting" />
+    <meta
+      content="telephone=no,address=no,email=no,date=no,url=no"
+      name="format-detection"
+    />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Mada:700"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Mada:400"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Mada:500"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://kit.fontawesome.com/f32ef44cb2.js" crossorigin="anonymous"></script>
+
+    <!-- check syles.html for site wide styles -->
+    {{template "styles" .}}
+
+    <title>{{ .Subject}}</title>
+  </head>
+  <body
+    width="100%"
+    style="
+      background-color: #F5F5F5;
+      margin: 0;
+      padding: 0 !important;
+      mso-line-height-rule: exactly;
+    "
+  >
+    <div style="background-color: #f5f5f5">
+      <table width="100%" cellpadding="0" cellspacing="0" border="0">
+        <tr>
+          <td valign="top" align="center">
+            <table
+              bgcolor="#f5f5f5"
+              style="margin: 0 auto"
+              align="center"
+              id="brick_container"
+              cellspacing="0"
+              cellpadding="0"
+              border="0"
+              width="720"
+              class="email-container"
+            >
+              <!-- START CENTERED WHITE CONTAINER -->
+              {{block "content" .}}{{end}}
+              <!-- end centered -->
+            </table>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </body>
 </html>
 {{end}}
-
