update register endpoint

--- a/templates/verificationCode.tmpl
+++ b/templates/verificationCode.tmpl
@@ -37,7 +37,7 @@
                     ></td>
                   </tr>
                   <tr>
-                    <td style="vertical-align: bottom" width="190">
+                    <!--<td style="vertical-align: bottom" width="190">
                       <img
                         src="https://colosach.com/email/logo.png"
                         width="190"
@@ -48,7 +48,7 @@
                           height: auto;
                           display: block;
                         "
-                      <img/>
+                      <img/>-->
                     </td>
                     <td> </td>
                     <td style="vertical-align: bottom" width="104">
@@ -112,14 +112,14 @@
               </td>
             </tr>
             <tr>
-              <td width="640" height="200px" align="center">
+              <!--<td width="640" height="200px" align="center">
                 <img
                   src="{{ .BannerImageUrl}}"
                   width="640"
                   border="0"
                   style="width: 100%; height: auto; display: block"
                 />
-              </td>
+              </td>-->
             </tr>
             <tr>
               <td
